--- a/build.gradle
+++ b/build.gradle
@@ -14,5 +14,5 @@ repositories {
 dependencies {
     testImplementation     'junit:junit:4.13'
     implementation 'org.terasoluna.gfw:terasoluna-gfw-jodatime:5.7.0.RELEASE'
-    implementation 'com.github.Darren-Br:software-enigineering-assignment:master-SNAPSHOT'
+    implementation 'com.github.Darren-Br:software-enigineering-assignment:last'
 }
